experiments/logsICC/9035.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(68): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(71): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(81): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(84): error: schedule clause is incompatible with directive
        #pragma omp target teams distribute thread_limit(128) schedule(static, 1)
                                                              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(91): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 1) simd 
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(94): error: schedule clause is incompatible with directive
        #pragma omp target teams distribute thread_limit(128) schedule(static, 1)
                                                              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c(104): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/9035.c (code 2)
